Bug 1647169: Optional call can't be a direct eval. r=yulia

Test case will be added through the next test262 sync:
- https://github.com/tc39/test262/pull/2667

Differential Revision: https://phabricator.services.mozilla.com/D80416